# vk-junior-highload-server

./: CMakeLists.txt  CPPLINT.cfg  Dockerfile  Makefile  README.md  highload_server  main.cpp
.github/workflows/: pipeline.yml
cli/: main.c
include/client/: client.h
include/config/: config.h
include/hello/: hello.h
include/hello2/: hello2.h
include/server/: server.h
src/: client.c  client.cpp  config.c  config.cpp  hello.c  hello2.c  server.c  server.cpp
